# phonic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
.github/workflows/: build.yml
.zed/: debug.json  settings.json  tasks.json
examples/: play-custom.rs  play-device.rs  play-file.rs  play-glide.rs  play-grains.rs  play-interactive.rs  play-metronome.rs  play-midi.rs  play-mixer.rs  play-multi-threaded.rs  play-parallel.rs  play-sequence.rs  play-synth.rs  waveform.rs
examples/common/: arguments.rs  mod.rs
examples/common/synths/: bass.rs  dx7.rs  fm3.rs  mod.rs  organ.rs  sub3.rs
examples/play-emscripten/: Cargo.toml  README.md  build.ps1  build.rs  build.sh  serve.ps1
examples/play-emscripten/src/: app.rs  main.rs
examples/play-emscripten/web/: app.css  app.js  index.html  play_emscripten.d  play_emscripten.data  play_emscripten.js  play_emscripten.wasm
src/: effect.rs  error.rs  generator.rs  lib.rs  modulation.rs  output.rs  parameter.rs  player.rs  source.rs  transport.rs  utils.rs  waveform.rs
src/effect/: chorus.rs  compressor.rs  dcfilter.rs  delay.rs  distortion.rs  dyn.rs  eq5.rs  filter.rs  gain.rs  gate.rs  pan.rs  reverb.rs
src/generator/: dyn.rs  empty.rs  fundsp.rs  sampler.rs  sequencer.rs
src/generator/fundsp/: ahdsr.rs  modulation.rs  parameter.rs  parameters.rs  voice.rs
src/generator/sampler/: granular.rs  modulation.rs  voice.rs
src/generator/sequencer/: metronome.rs  midi_file.rs  pattern.rs
src/modulation/: matrix.rs  processor.rs  state.rs
src/output/: cpal.rs  cubeb.rs  sokol.rs  wav.rs  web.rs
src/parameter/: boolean.rs  enum.rs  float.rs  formatters.rs  integer.rs  scaling.rs  smoothed.rs
src/player/: file.rs  handles.rs
src/player/handles/: effect.rs  file.rs  generator.rs  mixer.rs  sequencer.rs  source.rs  synth.rs
src/player/output/: cpal.rs  cubeb.rs
src/source/: amplified.rs  converted.rs  decoded.rs  decoder.rs  empty.rs  file.rs  generator.rs  guarded.rs  mapped.rs  measured.rs  metered.rs  mixed.rs  panned.rs  playback.rs  resampled.rs  status.rs  stretched.rs  synth.rs
src/source/file/: buffer.rs  common.rs  decoder.rs  info.rs  preloaded.rs  streamed.rs
src/source/generator/: fundsp.rs  sampler.rs
src/source/generator/fundsp/: ahdsr.rs  voice.rs
src/source/generator/sampler/: voice.rs
src/source/mixed/: effect.rs  submixer.rs
src/source/mixed/submixer/: processing.rs  sync.rs  thread_pool.rs
src/source/synth/: common.rs  dasp.rs  fundsp.rs
src/utils/: actor.rs  ahdsr.rs  buffer.rs  decoder.rs  dsp.rs  event.rs  fader.rs  filter.rs  fundsp.rs  id.rs  resampler.rs  smoothed.rs  smoothing.rs  stretcher.rs  time.rs  wave.rs  waveform.rs
src/utils/dsp/: delay.rs  envelope.rs  filters.rs  lfo.rs  modulation.rs
src/utils/dsp/filters/: biquad.rs  dc.rs  svf.rs
src/utils/filter/: dc.rs  svf.rs
src/utils/fundsp/: ahdsr.rs  fast_sine.rs  multi_osc.rs  shared_buffer.rs
src/utils/resampler/: cubic.rs  rubato.rs
src/utils/stretcher/: bungee.rs  signalsmith.rs
