[package]
authors = ["Eduard Müller <mail@emuell.net>"]
categories = ["multimedia::audio"]
description = "Audio playback library"
edition = "2021"
exclude = ["assets", "examples"]
keywords = ["audio", "dsp", "playback", "emscripten"]
license = "	AGPL-3.0"
name = "phonic"
readme = "README.md"
repository = "https://github.com/emuell/phonic"
version = "0.13.0"

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies
[dependencies]
assume = { version = "^0.5" }
byteorder = { version = "^1.5", default-features = false }
rand = { version = "^0.9", default-features = false, features = ["thread_rng"] }
document-features = { version = "^0.2" }
log = { version = "^0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
strum = { version = "^0.27", default-features = false, features = ["derive"] }
four-cc = { version = "^0.4", default-features = false }
crossbeam-queue = { version = "^0.3", default-features = false, features = [
    "alloc",
] }
dashmap = { version = "^6.1" }
pulp = { version = "^0.21", default-features = false, features = ["macro"] }
basedrop = { version = "^0.1" }
audio_thread_priority = { version = "^0.34", default-features = false }
rubato = { version = "^0.16", default-features = false }
rb = { version = "^0.4" }
symphonia = { version = "^0.5", default-features = false, features = [
    # enable audio codecs and formats only
    "aiff",
    "adpcm",
    "alac",
    "flac",
    "ogg",
    "mp3",
    "pcm",
    "wav",
] }
riff = { version = "^2.0" }

# Optional dependencies
assert_no_alloc = { version = "^1.1", features = [
    "warn_debug",
], optional = true }
fundsp = { version = "^0.20", optional = true, default-features = false }
cpal = { version = "^0.16", optional = true, features = ["jack", "asio"] }
hound = { version = "^3.5", optional = true }
bungee-rs = { version = "^0.1", optional = true }
signalsmith-stretch = { version = "^0.1", optional = true }

# Target specific dependencies
[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten_rs_sys = { version = "^0.1", default-features = false }
emscripten-rs-macros = { version = "^0.1" }

# Test & Examples dependencies
[target.'cfg(not(target_os = "emscripten"))'.dev-dependencies]
arg = { version = "^0.4", features = ["std"] }
simple_logger = { version = "^5.1", default-features = false }
device_query = { version = "^4.0" }
hound = { version = "^3.5" }
svg = { version = "^0.18" }

# Enable debug info for profiling
[profile.release]
debug = 1

# enable optimization for slow DSP packages in debug builds
[profile.dev.package.rubato]
opt-level = 2
[profile.dev.package.fundsp]
opt-level = 2
[profile.dev.package.signalsmith-stretch]
opt-level = 2

# Features
[features]
## Enables real-time alloc assertions in all audio output backends.
assert-allocs = ["assert_no_alloc"]

## Optional Wav output writer audio output backend.
wav-output = ["dep:hound"]
## Use CPAL as default audio output backend.
cpal-output = ["dep:cpal"]
## Use audio output backend for web browsers. Only works with Emscripten targets.
web-output = []

## Enable optional fundsp synth generation features.
fundsp = ["dep:fundsp"]

## Enable source time-stretching playback features.
time-stretching = ["dep:signalsmith-stretch", "dep:bungee-rs"]

default = [
    "assert-allocs",
    "cpal-output",
    "wav-output",
    "fundsp",
    "time-stretching",
]

[package.metadata.docs.rs]
# don't include "web-audio" here: it fails to compile at docs.rs because of emscripten
no-default-features = true
features = ["cpal-output", "wav-output", "fundsp"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "play-file"
required-features = ["wav-output"]
[[example]]
name = "play-synth"
required-features = ["wav-output", "fundsp"]
[[example]]
name = "play-interactive"
required-features = ["wav-output", "fundsp"]
[[example]]
name = "play-custom"
required-features = ["wav-output"]
[[example]]
name = "play-sequence"
required-features = ["wav-output"]
