[package]
authors = ["Eduard Müller <mail@emuell.net>"]
categories = ["multimedia::audio"]
description = "Audio playback library"
edition = "2021"
exclude = ["assets", "examples"]
keywords = ["audio", "dsp", "playback", "emscripten"]
license = "	AGPL-3.0"
name = "phonic"
readme = "README.md"
repository = "https://github.com/emuell/phonic"
version = "0.11.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
assume = { version = "^0.5" }
byteorder = { version = "^1.5" }
rand = { version = "0.9" }
log = { version = "^0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
strum = { version = "^0.27", features = ["derive"] }
four-cc = { version = "0.4" }
lazy_static = { version = "^1.4" }
crossbeam-channel = { version = "^0.5" }
crossbeam-queue = { version = "^0.3" }
dashmap = { version = "^6.1" }
pulp = { version = "^0.21", features = ["macro"] }
basedrop = { version = "^0.1" }
audio_thread_priority = { version = "^0.34", default-features = false }
rubato = { version = "^0.16", default-features = false }
rb = { version = "^0.4" }
symphonia = { version = "^0.5", default-features = false, features = [
    # enable audio codecs and formats only
    "aiff",
    "adpcm",
    "alac",
    "flac",
    "ogg",
    "mp3",
    "pcm",
    "wav",
] }
riff = { version = "^2.0" }

# Optional dependencies
assert_no_alloc = { version = "^1.1", features = [
    "warn_debug",
], optional = true }
dasp = { version = "^0.11", features = ["signal"], optional = true }
cpal = { version = "^0.16", optional = true, features = ["jack", "asio"] }
hound = { version = "^3.5", optional = true }

# Target specific dependencies
[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten_rs_sys = { version = "^0.1" }
emscripten-rs-macros = { version = "^0.1" }

# Tests & Examples dependencies
[target.'cfg(not(target_os = "emscripten"))'.dev-dependencies]
lazy_static = { version = "^1.4" }
arg = { version = "^0.4", features = ["std"] }
simple_logger = { version = "^5.0", default-features = false, features = [
    "colors",
] }
device_query = { version = "^4.0" }
ctrlc = { version = "^3.4" }
hound = { version = "^3.5" }
svg = { version = "^0.18" }

[profile.release]
debug = 1 # debug info for profiling

[profile.dev.package.rubato]
opt-level = 2 # enable optimization for slow DSP packages in debug builds

[features]
assert-allocs = ["assert_no_alloc"]
cpal-output = ["cpal"]
wav-output = ["hound"]
web-output = []
dasp-synth = ["dasp"]
default = ["cpal-output", "wav-output", "dasp-synth", "assert-allocs"]

[package.metadata.docs.rs]
# don't include "web-audio" here: it fails to compile at docs.rs because of emscripten
no-default-features = true
features = ["cpal-output", "wav-output", "dasp-synth"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "play-file"
required-features = ["wav-output"]
[[example]]
name = "play-synth"
required-features = ["wav-output", "dasp-synth"]
[[example]]
name = "play-interactive"
required-features = ["wav-output", "dasp-synth"]
[[example]]
name = "play-custom"
required-features = ["wav-output"]
[[example]]
name = "play-sequence"
required-features = ["wav-output"]
