[package]
authors = ["Eduard Müller <mail@emuell.net>"]
categories = ["multimedia::audio"]
description = "Audio playback library"
edition = "2021"
exclude = ["assets", "examples"]
keywords = ["audio", "dsp", "playback", "emscripten"]
license = "	AGPL-3.0"
name = "phonic"
readme = "README.md"
repository = "https://github.com/emuell/phonic"
version = "0.14.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
assume = { version = "^0.5" }
byteorder = { version = "^1.5", default-features = false }
rand = { version = "^0.9", default-features = false, features = ["thread_rng", "small_rng"] }
log = { version = "^0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
panic-message = { version = "^0.3" }
strum = { version = "^0.27", default-features = false, features = ["derive"] }
four-cc = { version = "^0.4", default-features = false }
num_cpus = { version = "^1.16" }
crossbeam-queue = { version = "^0.3", default-features = false, features = [
    "alloc",
] }
crossbeam-channel = { version = "^0.5", default-features = false, features = [
    "std",
] }
dashmap = { version = "^6.1" }
pulp = { version = "^0.21", default-features = false, features = ["macro"] }
basedrop = { version = "^0.1" }
audio_thread_priority = { version = "^0.34", default-features = false }
rubato = { version = "^0.16", default-features = false }
rb = { version = "^0.4" }
symphonia = { version = "^0.5", default-features = false, features = [
    # enable audio codecs and formats only
    "aiff",
    "adpcm",
    "alac",
    "flac",
    "ogg",
    "mp3",
    "pcm",
    "wav",
] }
riff = { version = "^2.0" }

# Optional dependencies
assert_no_alloc = { version = "^1.1", features = [
    "warn_debug",
], optional = true }
fundsp = { version = "^0.23", optional = true, default-features = false, features = [
    "std",
] }
cpal = { version = "^0.16", optional = true, features = ["jack", "asio"] }
hound = { version = "^3.5", optional = true }
bungee-rs = { version = "^0.2", optional = true }
signalsmith-stretch = { version = "^0.1", optional = true }

# Target specific dependencies
[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten_rs_sys = { version = "^0.1", default-features = false }
emscripten-rs-macros = { version = "^0.1" }

# Test & Examples dependencies
[target.'cfg(not(target_os = "emscripten"))'.dev-dependencies]
arg = { version = "^0.4", features = ["std"] }
simple_logger = { version = "^5.1", default-features = false }
device_query = { version = "^4.0" }
hound = { version = "^3.5" }
svg = { version = "^0.18" }

[profile.release]
debug = 1 # debug info for profiling

# enable optimization for slow DSP packages in debug builds
[profile.dev.package.rubato]
opt-level = 2
[profile.dev.package.fundsp]
opt-level = 2
[profile.dev.package.signalsmith-stretch]
opt-level = 2

[features]
# output impls
cpal-output = ["dep:cpal"]
wav-output = ["dep:hound"]
web-output = []
# optional features
assert-allocs = ["dep:assert_no_alloc"]
time-stretching = ["dep:signalsmith-stretch", "dep:bungee-rs"]
fundsp = ["dep:fundsp"]
# all features without emscripten, web support
default = [
    "assert-allocs",
    "cpal-output",
    "wav-output",
    "time-stretching",
    "fundsp",
]

[package.metadata.docs.rs]
# don't include "web-audio" here: it fails to compile at docs.rs
no-default-features = true
features = ["cpal-output", "wav-output", "time-stretching", "fundsp"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "play-file"
required-features = ["wav-output", "time-stretching"]
[[example]]
name = "play-synth"
required-features = ["wav-output", "fundsp"]
[[example]]
name = "play-interactive"
required-features = ["wav-output", "fundsp"]
[[example]]
name = "play-grains"
required-features = ["wav-output"]
[[example]]
name = "play-custom"
required-features = ["wav-output"]
[[example]]
name = "play-sequence"
required-features = ["wav-output"]
[[example]]
name = "play-multi-threaded"
required-features = ["wav-output", "fundsp"]
