[package]
name = "play_emscripten"
version = "0.2.0"
edition = "2018"
description = "Emscripten WASM example for phonic"

# see build.rs and build.sh for the emscripten config

[dependencies]
phonic = { path = "../..", default-features = false, features = [
    "web-output",
    "fundsp",
] }
emscripten_rs_sys = { version = "^0.1" }
fundsp = { version = "^0.20", default-features = false }
four-cc = { version = "^0.4" }
strum = { version = "^0.27", default-features = false }
rand = { version = "^0.9", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
